--- a/Lab3.css
+++ b/Lab3.css
@@ -22,3 +22,20 @@
     color: white;
 
 }
+
+.main-container{
+    width: 70%;
+    float: left;
+    margin: 0;
+}
+
+.main-container{
+    background-color: aqua;
+    padding: 5px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 15px;
+    margin: 5px;
+}
+
+
